# pure-study

./: .env.example  .gitignore  README.md  docker-compose.yml
frontend/: Pure Study App.jsx  Pure Study Course Page.jsx  Pure Study Graph.jsx  Pure Study New.html  Pure Study New.jsx  Pure Study Screens.jsx  Study Panel pure-study.jsx
frontend/app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/app/public/: landing.html  robots.txt  sitemap.xml
frontend/app/src/: App.tsx  index.css  main.tsx  types.ts
keys/: .gitignore
services/ai/: Dockerfile  main.py  pyproject.toml  settings.py
services/ai/app/: logging_config.py  models.py
services/ai/tests/: conftest.py  test_copilot.py  test_explanation.py  (+2 more)
services/auth/: Dockerfile  main.py  pyproject.toml  settings.py
services/check/: Dockerfile  main.py  pyproject.toml
services/gateway/: Dockerfile  main.py  pyproject.toml  settings.py
services/graph/: Dockerfile  main.py  pyproject.toml  settings.py
services/graph/app/: logging_config.py
services/graph/app/api/dtos/: course_dtos.py  edge_dtos.py  topic_dtos.py
services/graph/app/api/handlers/: admin_handler.py  graph_handler.py
services/graph/app/api/routers/: graph_router.py
services/graph/app/domain/: topic.py
services/graph/app/falkordb/: course_repo.py  edge_repo.py  session.py  topic_repo.py
services/graph/app/services/: graph_service.py
services/graph/tests/: conftest.py  test_graph_service.py  test_topic_domain.py
services/material/: Dockerfile  main.py  pyproject.toml  settings.py
(+97 files in other folders)
